Exp-2/output/hf-eval-data-v3/f00864_extract_entities.err
  File "./f00864_extract_entities.py", line 29
    test_text1 = 'Hello, my name is John Doe, and I work at Microsoft. Tomorrow, I'll be going to a conference in San Francisco.'
                                                                                   ^
SyntaxError: invalid syntax
